--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -18,11 +18,12 @@
       <div class="bg-light-primary d-flex align-items-center rounded p-16">
         <img src="/assets/images/profile/user-1.jpg" width="40" class="rounded-circle">
         <div class="m-l-16">
-          <h4 class="f-w-600">Mike</h4>
-          <span class="f-s-12">Admin</span>
+          <h4 class="f-w-600">{{ fullName }}</h4>
+          <span class="f-s-12">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ role }}</span>
         </div>
         <div class="m-l-auto">
-          <a mat-icon-button class="d-flex justify-content-center mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base" href="/authentication/login">
+          <a mat-icon-button class="d-flex justify-content-center mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
+          (click)="clearStorage()">
             <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple"></span>
             <i-tabler name="power" class="text-primary icon-18 d-flex">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
