--- a/src/app/pages/ui-components/add-pistolet-mecanique/add-pistolet-mecanique.component.html
+++ b/src/app/pages/ui-components/add-pistolet-mecanique/add-pistolet-mecanique.component.html
@@ -117,7 +117,7 @@
   
         <div class="m-t-12">
           <button mat-flat-button color="primary" class="m-r-8" type="submit" id="btnSave">Submit</button>
-          <button mat-stroked-button color="warn" (click)="cancelForm()" id="btnCancel">Cancel</button>
+        	<button mat-flat-button class="bg-error text-white m-l-8"(click)="cancelForm()" id="btnCancel">Cancel</button>
         </div>
       </form>
     </mat-card-content>
