--- a/src/app/pages/ui-components/chart-add-pistolet-jaune/chart-add-pistolet-jaune.component.html
+++ b/src/app/pages/ui-components/chart-add-pistolet-jaune/chart-add-pistolet-jaune.component.html
@@ -30,6 +30,11 @@
             </e-series>
           </e-series-collection>
         </ejs-chart>
+        <span id="label34"> 34 -</span>
+        <span id="label35"> 35 -</span>
+        <span id="label40"> 40 -</span>
+        <span id="label45"> 45 -</span>
+        <span id="label46"> 46 -</span>
       </div>
       <div style="width: 100%; height: 250px;">
         <ejs-chart 
@@ -54,106 +59,53 @@
       </div>
       <br> <br>
       <form>
-        <div class="row">
-          <div class="col-lg-6">
+        <div class="form-container">
+          <!-- Première colonne (gauche) -->
+          <div class="form-column">
             <mat-label class="f-w-600 m-b-30 d-block">Type de pistolet : &nbsp;
-              <span class="labelCoupePropre">Pistolet Vert </span>
-            </mat-label>         
-            <mat-label class="f-w-600 m-b-30 d-block">Numéro de pistolet  :&nbsp;
-              <span class="labelCoupePropre"> 212 </span>
+              <span class="labelCoupePropre">Pistolet Vert</span>
             </mat-label>
-            <mat-label class="f-w-600 m-b-30 d-block">Coupe Propre  :&nbsp;
-              <span class="labelCoupePropre">N-OK </span>
+            <mat-label class="f-w-600 m-b-30 d-block">Numéro de pistolet : &nbsp;
+              <span class="labelCoupePropre">212</span>
+            </mat-label>
+            <mat-label class="f-w-600 m-b-30 d-block">Coupe Propre : &nbsp;
+              <span class="labelCoupePropre">N-OK</span>
             </mat-label>
             <mat-label class="f-w-600 m-b-30 d-block">Nombre de collier tester : &nbsp;
-              <span class="labelCoupePropre"> p0001 </span>
+              <span class="labelCoupePropre">p0001</span>
             </mat-label>
             <mat-label class="f-w-600 m-b-30 d-block">Axe de serrage : &nbsp;
-              <span class="labelCoupePropre"> 2374 </span>
-            </mat-label>  
-            <mat-label class="f-w-600 m-b-30 d-block">Semaine :&nbsp;
+              <span class="labelCoupePropre">2374</span>
+            </mat-label>
+            <mat-label class="f-w-600 m-b-30 d-block">Semaine : &nbsp;
               <span class="labelCoupePropre">4</span>
             </mat-label>
-   
           </div>
-        </div>
-         <br>
-  
-  
-        <div class="form-container">
-          <div class="form-row">
-            <div class="rowspan-cell">
-              <span></span>
-            </div>
-            <div class="col-lg-6">
-              <mat-label class="f-w-600 m-b-20 d-block">échantillon 1: &nbsp;
-                <span class="labelCoupePropre">12 </span>
-              </mat-label>         
-            </div>
-         
-          </div>
-          <div class="form-row">
-            <div class="rowspan-cell">
-              <span></span>
-            </div>
-            <div class="col-lg-6">
-              <mat-label class="f-w-600 m-b-20 d-block">échantillon 2: &nbsp;
-                <span class="labelCoupePropre">20 </span>
-              </mat-label>         
-            </div>
-         
-          </div>
-        
-          <div class="form-row">
-            <div class="rowspan-cell">
-              <span></span>
-            </div>
-            <div class="col-lg-6">
-              <mat-label class="f-w-600 m-b-20 d-block">échantillon 3: &nbsp;
-                <span class="labelCoupePropre">12 </span>
-              </mat-label>         
-            </div>
-         
-          </div>
-        
-          <div class="form-row">
-            <div class="rowspan-cell">
-              <span></span>
-            </div>
-            <div class="col-lg-6">
-              <mat-label class="f-w-600 m-b-20 d-block">échantillon 4: &nbsp;
-                <span class="labelCoupePropre">15 </span>
-              </mat-label>         
-            </div>
-         
-          </div>
-     
-          <div class="form-row">
-            <div class="rowspan-cell">
-              <span></span>
-            </div>
-            <div class="col-lg-6">
-              <mat-label class="f-w-600 m-b-20 d-block">échantillon 5: &nbsp;
-                <span class="labelCoupePropre">20 </span>
-              </mat-label>         
-            </div>
-         
-          </div>
-          <div class="form-row">
-            <div class="rowspan-cell">
-              <span></span>
-            </div>
-            <div class="col-lg-6">
-              <mat-label class="f-w-600 m-b-20 d-inline-block me-3">
-                Moyenne X̄ : <span class="labelCoupePropre">20 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-              </mat-label>
-              <mat-label class="f-w-600 m-b-20 d-inline-block">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Etendu R : <span class="labelCoupePropre">20</span>
-              </mat-label>
-            </div>
+      
+          <!-- Deuxième colonne -->
+          <div class="form-column">
+            <mat-label class="f-w-600 m-b-30 d-block">Échantillon 1 : &nbsp;
+              <span class="labelCoupePropre">Valeur 1</span>
+            </mat-label>
+            <mat-label class="f-w-600 m-b-30 d-block">Échantillon 2 : &nbsp;
+              <span class="labelCoupePropre">Valeur 2</span>
+            </mat-label>
+            <mat-label class="f-w-600 m-b-30 d-block">Échantillon 3 : &nbsp;
+              <span class="labelCoupePropre">Valeur 3</span>
+            </mat-label>
+            <mat-label class="f-w-600 m-b-30 d-block">Échantillon 4 : &nbsp;
+              <span class="labelCoupePropre">Valeur 4</span>
+            </mat-label>
+            <mat-label class="f-w-600 m-b-30 d-block">Échantillon 5 : &nbsp;
+              <span class="labelCoupePropre">Valeur 5</span>
+            </mat-label>
+            <mat-label class="grid-label-container">
+              <span>Moyenne X̄ : &nbsp;<span class="labelCoupePropre">4</span></span>
+              <span class="right-text">Étendue R = &nbsp;<span class="labelCoupePropre">10</span></span>
+            </mat-label>
           </div>
         </div>
       </form>
-     
+
     </mat-card-content>
   </mat-card>
