--- a/src/app/pages/ui-components/add-pistolet-pneumatique/add-pistolet-pneumatique.component.html
+++ b/src/app/pages/ui-components/add-pistolet-pneumatique/add-pistolet-pneumatique.component.html
@@ -116,8 +116,8 @@
         </div>
   
         <div class="m-t-12">
-          <button mat-flat-button color="primary" class="m-r-8" type="submit" id="btnSave">Submit</button>
-          <button mat-flat-button class="bg-error text-white m-l-8" (click)="cancelForm()" id="btnCancel">Cancel</button>
+          <button mat-flat-button color="primary" class="m-r-8" type="submit" id="btnSave">Valider</button>
+          <button mat-flat-button class="bg-error text-white m-l-8" (click)="cancelForm()" id="btnCancel">Annuler</button>
         </div>
       </form>
     </mat-card-content>
