--- a/src/app/pages/ui-components/chart-add-pistolet-rouge/chart-add-pistolet-rouge.component.scss
+++ b/src/app/pages/ui-components/chart-add-pistolet-rouge/chart-add-pistolet-rouge.component.scss
@@ -102,8 +102,8 @@
    margin-left: 200px;
  }
  #titreNumCourant{
-   margin-left: 300px;
-   color: #003d89;
+  margin-left: 385px;
+  color: #003d89;
  }
  .labelCoupePropre{
    color: #003d89;
@@ -167,4 +167,7 @@
   font-family: auto;
   left: -132px;
   font-size: 15px;
+}
+#btnSave{
+  margin-left: 330px;
 }
